Fixed projects on tablet version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -319,7 +319,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-height: 20rem;
+  min-height: 15rem;
   color: white;
   text-align: center;
   background: #e88069;
@@ -329,7 +329,7 @@
 }
 
 .design__main__heading {
-  padding-top: 3rem;
+  margin-top: 3rem;
   font-size: 30px;
   font-weight: 500;
   line-height: 35px;
@@ -353,7 +353,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
   height: 100%;
   width: 100%;
   text-align: center;
@@ -854,6 +854,20 @@
         align-self: flex-end;
   }
   /***************** PROJECTS *****************/
+  .design__main {
+    padding: 0;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    border-radius: 1rem;
+  }
+  .design__main h2 {
+    font-size: 48px;
+    font-weight: 400;
+    margin-top: 1rem 0;
+  }
+  .design__main p {
+    margin: 0 6rem;
+  }
   .design {
     margin-left: 1rem;
     margin-right: 1rem;
