--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -75,7 +75,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 20rem;
+  min-height: 15rem;
   color: $primary-color-white;
   text-align: center;
   background: $primary-color-peach;
@@ -84,7 +84,7 @@
   background-position: top;
 
   &__heading {
-    padding-top: 3rem;
+    margin-top: 3rem;
     font-size: 30px;
     font-weight: 500;
     line-height: 35px;
@@ -104,7 +104,7 @@
     display: grid;
     grid-template-columns: 1fr;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
     height: 100%;
     width: 100%;
     text-align: center;
