--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -48,6 +48,7 @@
   .projects {
     margin-left: 1rem;
     margin-right: 1rem;
+
     &__img {
       height: 12rem;
     }
@@ -111,8 +112,6 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: flex-end;
-
-        // border-bottom: 1px solid $secondary-color-darkGrey;
       }
 
       &__links {
@@ -146,14 +145,32 @@
   }
 
   /***************** PROJECTS *****************/
+  .design__main {
+    padding: 0;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    border-radius: 1rem;
+
+    h2 {
+      font-size: $xl-font;
+      font-weight: 400;
+      margin-top: 1rem 0;
+    }
+
+    p {
+      margin: 0 6rem;
+    }
+  }
 
   .design {
     margin-left: 1rem;
     margin-right: 1rem;
+
     &__item {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       margin-bottom: 1rem;
+
       img {
         border-radius: 1rem 0 0 1rem;
       }
